<resources>
    <string name="app_name">TT2021B017</string>
    <string name="testText">Resúmen de tu reporte</string>
    <string name="logIn_text">Sign in</string>
    <string name="auth_singup">Inicia sesión con tu cuenta</string>
    <string name="auth_email">email</string>
    <string name="auth_password">contraseña</string>
    <string name="auth_forgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="auth_signin">Iniciar sesion</string>
    <string name="auth_newaccount">¿No tienes una cuenta?</string>
    <string name="home_principal">Página principal</string>
    <string name="home_iniciar">❤ Iniciar nuevo chequeo</string>
    <string name="home_signout">cerrar sesion</string>
    <string name="home_historial">Tus últimos reportes:</string>
    <string name="historial_textoPrincipal">Historial de reportes</string>
    <string name="signUp_crearCuenta">Crea tu cuenta</string>
    <string name="signUp_contraseñaRepetir">repite tu contraseña</string>
    <string name="signUp_registrar">registrar</string>
    <string name="home_btnHistorial">ver historial</string>
    <string name="card_frecuencia">Frecuencia \n Cardíaca</string>
    <string name="card_revisar">revisar</string>
    <string name="review_frecuencia">Frecuencia cardíaca al momento del análisis:</string>
    <string name="check_resumen">Resúmen</string>
    <string name="checl_cargando">cargando...</string>
    <string name="check_chequeo">Realizar chequeo</string>
    <string name="home_aviso">Recuerda conectar tu <b>smartwatch</b> y tenerlo bien colocado en la muñeca.</string>
    <string name="home_user">página usuario</string>
    <string name="user_titulo">Completa tu información</string>
    <string name="user_save">guardar</string>
    <string name="fecha">dd/mmmm/aa</string>
    <string name="cargando">Cargando reportes</string>
    <string name="signUp_aviso">La contraseña debe tener al menos <b>8 caracteres</b>, un número y un carácter especial.</string>
    <string name="todo">TODO</string>
    <string name="user_name">nombre</string>
    <string name="user_lastname">apellidos</string>
    <string name="user_fechanac">fecha de nacimiento</string>
    <string name="user_peso">peso</string>
    <string name="user_altura">altura</string>
    <string name="user_fecha">Indica tu fecha de nacimiento</string>
    <string name="user_dia">día</string>
    <string name="user_mes">mes</string>
    <string name="user_año">año</string>
    <string name="cargandoUsers">Cargando información</string>
    <string name="user_kg">kg</string>
    <string name="user_cm">cm</string>
    <string name="auth_google">Log in with Google</string>
    <string name="title">Heart Checker</string>
</resources>