<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity"
    android:background="@color/fondo"
    android:paddingBottom="@dimen/large_space">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cargandoUsers"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="@id/progressBar"
        app:layout_constraintTop_toBottomOf="@id/progressBar"/>

    <TextView
        android:id="@+id/txtPrincipal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_space"
        android:layout_marginTop="@dimen/common_space"
        android:text="@string/user_titulo"
        android:textColor="#148ACA"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/testText"
        android:src="@drawable/ic_arrow_back_blue"
        app:layout_constraintStart_toStartOf="@id/txtPrincipal"
        app:layout_constraintTop_toBottomOf="@id/txtPrincipal"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_space"
        android:background="@drawable/ic_radius"
        android:hint="@string/user_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_space"
        android:background="@drawable/ic_radius"
        android:hint="@string/user_lastname"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        app:layout_constraintEnd_toEndOf="@id/txtNombre"
        app:layout_constraintStart_toStartOf="@id/txtNombre"
        app:layout_constraintTop_toBottomOf="@id/txtNombre"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txtfechaaux"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#148ACA"
        android:textSize="18sp"
        android:text="@string/user_fecha"
        android:paddingStart="20dp"
        android:layout_marginTop="@dimen/common_space"
        app:layout_constraintStart_toStartOf="@id/txtApellidos"
        app:layout_constraintTop_toBottomOf="@id/txtApellidos"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/txtdia"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_space"
        android:background="@drawable/ic_radius"
        android:hint="@string/user_dia"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        app:layout_constraintStart_toStartOf="@id/txtApellidos"
        app:layout_constraintTop_toBottomOf="@id/txtfechaaux"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/txtmes"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_space"
        android:background="@drawable/ic_radius"
        android:hint="@string/user_mes"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        app:layout_constraintEnd_toEndOf="@id/txtApellidos"
        app:layout_constraintStart_toStartOf="@id/txtApellidos"
        app:layout_constraintTop_toBottomOf="@id/txtfechaaux"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/txtanio"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_space"
        android:background="@drawable/ic_radius"
        android:hint="@string/user_año"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        app:layout_constraintEnd_toEndOf="@id/txtApellidos"
        app:layout_constraintTop_toBottomOf="@id/txtfechaaux"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/peso"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_space"
        android:background="@drawable/ic_radius"
        android:hint="@string/user_peso"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        app:layout_constraintStart_toStartOf="@id/txtdia"
        app:layout_constraintTop_toBottomOf="@id/txtdia"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txtpesoaux"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#148ACA"
        android:textSize="18sp"
        android:text="@string/user_kg"
        android:paddingStart="20dp"
        android:layout_marginTop="@dimen/common_space"
        app:layout_constraintStart_toEndOf="@id/peso"
        app:layout_constraintTop_toTopOf="@id/peso"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/altura"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_space"
        android:background="@drawable/ic_radius"
        android:hint="@string/user_altura"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        app:layout_constraintStart_toStartOf="@id/peso"
        app:layout_constraintTop_toBottomOf="@id/peso"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txtalturaaux"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#148ACA"
        android:textSize="18sp"
        android:text="@string/user_cm"
        android:paddingStart="20dp"
        android:layout_marginTop="@dimen/common_space"
        app:layout_constraintStart_toEndOf="@id/altura"
        app:layout_constraintTop_toTopOf="@id/altura"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_button"
        android:text="@string/user_save"
        android:layout_marginTop="@dimen/large_space"
        app:layout_constraintTop_toBottomOf="@id/altura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#ddd" />

</androidx.constraintlayout.widget.ConstraintLayout>
