<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:background="@drawable/wave"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/authLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_singup"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/ic_radius"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/auth_email"
                android:textColorHint="@color/text"
                android:textColor="@color/text"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry,TextFields" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/ic_radius"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/auth_password"
                android:textColorHint="@color/text"
                android:textColor="@color/text"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:password="true"
                tools:ignore="Deprecated,RtlSymmetry" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/auth_forgotPassword"
                android:textColor="@color/text"
                android:textAlignment="center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logInButton"
                android:layout_width="225dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:background="@drawable/ic_button"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:text="@string/auth_signin"
                android:textColor="#ddd" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logInGoogleButton"
                android:layout_width="225dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:background="@drawable/ic_radius"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/auth_google"
                android:textColor="#000"
                android:textSize="12sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/auth_newaccount"
                android:textColor="@color/text"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>