<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CheckActivity"
    android:background="@color/fondo">

    <TextView
        android:id="@+id/txtPrincipal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_space"
        android:layout_marginTop="@dimen/common_space"
        android:text="@string/check_chequeo"
        android:textColor="#148ACA"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/testText"
        android:src="@drawable/ic_arrow_back_blue"
        app:layout_constraintStart_toStartOf="@id/txtPrincipal"
        app:layout_constraintTop_toBottomOf="@id/txtPrincipal"
        tools:ignore="ImageContrastCheck" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        android:paddingHorizontal="@dimen/large_space"/>

    <TextView
        android:id="@+id/txtCargando"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/checl_cargando"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="@id/progressBar"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtCargando"
        app:layout_constraintStart_toStartOf="@id/btnBack"
        android:text="@string/check_resumen"
        android:textColor="@color/text"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>