<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">


    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/ic_banner"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_arrow_back"
            android:background="#00000000"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp_crearCuenta"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/authLayout"/>

    <LinearLayout
        android:id="@+id/authLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/ic_radius"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/auth_email"
                android:textColorHint="@color/text"
                android:textColor="@color/text"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry,TextFields" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp_aviso"
                android:textSize="18sp"
                android:textColor="@color/text"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:paddingHorizontal="@dimen/large_space"
                android:layout_marginTop="@dimen/common_space"
                />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/ic_radius"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/auth_password"
                android:textColorHint="@color/text"
                android:textColor="@color/text"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:password="true"
                tools:ignore="Deprecated,RtlSymmetry" />

            <EditText
                android:id="@+id/passwordConfirmEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/ic_radius"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/signUp_contraseñaRepetir"
                android:inputType="textPersonName"
                android:textColorHint="@color/text"
                android:textColor="@color/text"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:password="true"
                tools:ignore="Deprecated,RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                android:layout_width="225dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:background="@drawable/ic_button"
                android:text="@string/signUp_registrar"
                android:textColor="#ddd" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>